--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,35 @@
-db:
-    image: mariadb
-    restart: unless-stopped
-    environment:
-      ....
-      ....
+services:
+  php:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
     volumes:
-    - ./src/seed:/docker-entrypoint-initdb.d:ro
+      - ./src:/var/www/html/
+    environment:
+      - compose=true
+
+  mariadb:
+    image: mariadb:latest
+    container_name: mariadb
+    restart: always
+    environment:
+      MYSQL_USER: mariadb
+      MYSQL_PASSWORD: mariadb
+      MYSQL_DATABASE: todolist
+      MARIADB_ROOT_PASSWORD: mariadb
+    ports:
+      - 3306:3306
+    volumes:
+      - mariadb_data:/var/lib/mysql
+
+  adminer:
+    image: adminer:latest
+    container_name: adminer
+    restart: always
+    ports:
+      - 8080:8080
+
+volumes:
+  mariadb_data:
